fix spacing on about me

--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ h2{
 
 h3{
 	font-size: 32px;
-	margin-bottom: 80px;
-	margin-top: 40px;
+	margin-bottom: 60px;
+	margin-top: 20px;
 	min-height: 160px;
 	padding-top: 120px;
 
